--- a/config/simulator_config.yaml
+++ b/config/simulator_config.yaml
@@ -1,1 +1,25 @@
+# map
 map_name: "porto"
+map_ext: ".png"
+sx: 0.0
+sy: 0
+stheta: 0  # porto
+
+max_v: 7
+max_a: 8.5
+max_steer: 0.4
+max_d_dot: 3.2
+mu: 0.523
+m: 3.47
+g: 9.81
+l_r: 0.171
+l_f: 0.158
+
+# PP
+lookahead: 0.82
+v_gain: 0.9
+
+# test params
+test_n: 10
+
+
