--- a/config/simulator_config.yaml
+++ b/config/simulator_config.yaml
@@ -1,5 +1,7 @@
 # map
-map_name: "porto"
+# map_name: "porto"
+# map_name: "columbia_small"
+map_name: "f1_aut_wide"
 map_ext: ".png"
 sx: 0.0
 sy: 0
