--- a/config/simulator_config.yaml
+++ b/config/simulator_config.yaml
@@ -1,7 +1,7 @@
 # map
 # map_name: "porto"
-# map_name: "columbia_small"
-map_name: "f1_aut_wide"
+map_name: "columbia_small"
+# map_name: "f1_aut_wide"
 map_ext: ".png"
 sx: 0.0
 sy: 0
@@ -20,8 +20,11 @@ l_f: 0.158
 # PP
 lookahead: 0.82
 v_gain: 0.9
+v_min_plan: 1
 
 # test params
 test_n: 10
 
+#save_paths
+vehicle_path: "Data/Vehicles/"
 
