--- a/config/simulator_config.yaml
+++ b/config/simulator_config.yaml
@@ -17,6 +17,15 @@ g: 9.81
 l_r: 0.171
 l_f: 0.158
 
+# agent parameters
+n_beams: 20
+range_finder_scale: 5
+h_size: 100
+r1: 0.08
+r2: 0.001
+rk: 0.04
+
+
 #simulator
 sim_steps: 5
 
@@ -27,6 +36,7 @@ v_min_plan: 1
 
 # test params
 test_n: 10
+train_n: 20000
 
 #save_paths
 vehicle_path: "Data/Vehicles/"
