A kernel with Dynamics.py can be generated. Fake

--- a/config/kernel_config.yaml
+++ b/config/kernel_config.yaml
@@ -1,6 +1,6 @@
 # map
-# map_name: "porto"
-map_name: "columbia_small"
+map_name: "porto"
+# map_name: "columbia_small"
 # map_name: "f1_aut_wide"
 map_ext: ".png"
 sx: 0.0
@@ -52,7 +52,7 @@ kernel_mode: "viab"
 nq_steer: 5
 nq_velocity: 3
 min_kernel_v: 2
-kernel_time_step: 0.1
+kernel_time_step: 0.2
 n_dx: 40
 phi_range: 6.28
 n_phi: 41
