--- a/config/kernel_config.yaml
+++ b/config/kernel_config.yaml
@@ -1,7 +1,7 @@
 # map
 # map_name: "porto"
-# map_name: "columbia_small"
-map_name: "f1_aut_wide"
+map_name: "columbia_small"
+# map_name: "f1_aut_wide"
 map_ext: ".png"
 sx: 0.0
 sy: 0
@@ -24,7 +24,7 @@ range_finder_scale: 5
 h_size: 100
 r1: 0.08
 r2: 0.001
-rk: 0.0
+rk: 0.04
 
 
 #simulator
@@ -59,5 +59,9 @@ phi_range: 6.28
 n_phi: 41
 discrim_block: 1
 discrim_phi: 0.1
+
+# kernel Learning
+constant_reward: 1
+
 
 
