Goes fast with a lot of intervention

--- a/config/kernel_config.yaml
+++ b/config/kernel_config.yaml
@@ -6,6 +6,7 @@ map_ext: ".png"
 sx: 0.0
 sy: 0
 stheta: -0.4  # porto
+stheta: 0  # columbia
 
 # max_v: 7
 max_v: 3
@@ -38,7 +39,7 @@ v_min_plan: 1
 
 # test params
 test_n: 10
-train_n: 5000
+train_n: 25000
 
 #save_paths
 vehicle_path: "Data/Vehicles/"
