--- a/config/reward_run.yaml
+++ b/config/reward_run.yaml
@@ -1,7 +1,7 @@
 run_name: RewardTest
 
 base_config_name: "kernel_config"
-n: 2
+n: 3
 
 runs:
   # - run: 1
@@ -11,40 +11,40 @@ runs:
   #   rk: 0
   #   constant_reward: 0
 
-  - run: 2
-    name: "2BasePenalty"
-    r1: 0.08
-    r2: 0.001
-    rk: 0
-    constant_reward: 1
+  # - run: 2
+  #   name: "2BasePenalty"
+  #   r1: 0.08
+  #   r2: 0.001
+  #   rk: 0
+  #   constant_reward: 1
 
-  - run: 3
-    name: "3Bias002"
-    r1: 0.08
-    r2: 0.001
-    rk: 0.002
-    constant_reward: 1
+  # - run: 3
+  #   name: "3Bias002"
+  #   r1: 0.08
+  #   r2: 0.001
+  #   rk: 0.002
+  #   constant_reward: 1
 
   # - run: 4
   #   name: "4Bias004"
   #   r1: 0.08
   #   r2: 0.001
-  #   rk: 0.004
+  #   rk: 0.008
   #   constant_reward: 1
 
-  # - run: 5
-  #   name: "5Bias02"
-  #   r1: 0.08
-  #   r2: 0.001
-  #   rk: 0.02
-  #   constant_reward: 1
+  - run: 5
+    name: "5Bias02"
+    r1: 0.08
+    r2: 0.001
+    rk: 0.04
+    constant_reward: 1
 
-  # - run: 6
-  #   name: "6RkOnly"
-  #   r1: 0.0
-  #   r2: 0.00
-  #   rk: 0.002
-  #   constant_reward: 1
+  - run: 6
+    name: "6RaceZero"
+    r1: 0.08
+    r2: 0.001
+    rk: 0.02
+    constant_reward: 0
 
 
 
