--- a/config/kernel_config.yaml
+++ b/config/kernel_config.yaml
@@ -1,7 +1,7 @@
 # map
 # map_name: "porto"
-# map_name: "columbia_small"
-map_name: "f1_aut_wide"
+map_name: "columbia_small"
+# map_name: "f1_aut_wide"
 map_ext: ".png"
 sx: 0.0
 sy: 0
@@ -54,7 +54,7 @@ lookahead_time_step: 0.2
 nq_steer: 5
 nq_velocity: 11
 min_kernel_v: 2
-kernel_time_step: 0.3
+kernel_time_step: 0.2
 n_dx: 40
 phi_range: 6.28
 n_phi: 41
