--- a/config/kernel_config.yaml
+++ b/config/kernel_config.yaml
@@ -26,7 +26,9 @@ h_size: 100
 r1: 0.0
 r2: 0.00
 rk: 0.0
-
+r_time: 30
+r_done: 1
+r_time_weight: 0
 
 #simulator
 sim_steps: 5
@@ -39,7 +41,7 @@ v_min_plan: 1
 
 # test params
 test_n: 10
-train_n: 20000
+train_n: 30000
 
 #save_paths
 vehicle_path: "Data/Vehicles/"
