--- a/config/reward_run.yaml
+++ b/config/reward_run.yaml
@@ -1,15 +1,15 @@
 run_name: RewardTest
 
 base_config_name: "kernel_config"
-n: 3
+n: 4
 
 runs:
-  # - run: 1
-  #   name: "1Baseline"
-  #   r1: 0.012
-  #   r2: 0.006
-  #   rk: 0
-  #   constant_reward: 0
+  - run: 1
+    name: "1Baseline"
+    r1: 0.012
+    r2: 0.006
+    rk: 0
+    constant_reward: 0
 
   # - run: 2
   #   name: "2BasePenalty"
@@ -25,25 +25,32 @@ runs:
   #   rk: 0.002
   #   constant_reward: 1
 
-  - run: 4
-    name: "4Bias004"
-    r1: 0.012
-    r2: 0.006
-    rk: 0.008
-    constant_reward: 1
+  # - run: 4
+  #   name: "4Bias004"
+  #   r1: 0.012
+  #   r2: 0.006
+  #   rk: 0.008
+  #   constant_reward: 1
 
-  - run: 5
-    name: "5Bias02"
-    r1: 0.012
-    r2: 0.006
-    rk: 0.04
-    constant_reward: 1
+  # - run: 5
+  #   name: "5Bias04"
+  #   r1: 0.012
+  #   r2: 0.006
+  #   rk: 0.04
+  #   constant_reward: 1
 
-  - run: 6
-    name: "6RaceZero"
+  # - run: 6
+  #   name: "6RaceZero"
+  #   r1: 0.0
+  #   r2: 0.00
+  #   rk: 0.0
+    # constant_reward: 0
+
+  - run: 7
+    name: "7RaceZeroRk04"
     r1: 0.0
     r2: 0.00
-    rk: 0.0
+    rk: 0.04
     constant_reward: 0
 
 
