--- a/config/kernel_config.yaml
+++ b/config/kernel_config.yaml
@@ -8,8 +8,8 @@ sy: 0
 # stheta: -0.4  # porto
 stheta: 0  # columbia
 
-# max_v: 7
-max_v: 4
+max_v: 7
+# max_v: 3
 max_a: 8.5
 max_steer: 0.4
 max_d_dot: 3.2
@@ -52,8 +52,7 @@ kernel_mode: "viab"
 lookahead_time_step: 0.2
 
 nq_steer: 9
-nq_velocity: 5
-min_kernel_v: 1
+kernel_speed: 3
 kernel_time_step: 0.2
 n_dx: 40
 phi_range: 6.28
