--- a/config/kernel_config.yaml
+++ b/config/kernel_config.yaml
@@ -52,7 +52,7 @@ kernel_mode: "viab"
 lookahead_time_step: 0.2
 
 nq_steer: 9
-kernel_speed: 3
+vehicle_speed: 3
 kernel_time_step: 0.2
 n_dx: 40
 phi_range: 6.28
