--- a/config/config_file.yaml
+++ b/config/config_file.yaml
@@ -61,5 +61,6 @@ n_phi: 41                # number of points per rotation in discretising vehicle
 # kernel Learning
 constant_reward: 1       # constant reward applied at every step
 kernel_mode: "viab"      # Name to save kernel by
-
+track_shrink_pixels: 5   # number of pixels to shrink the track map by
+n_intermediate_pts: 2
 
