--- a/config/config_file.yaml
+++ b/config/config_file.yaml
@@ -44,7 +44,8 @@ v_min_plan: 1            # minimum speed for selecting a steering angle to preve
 
 # test params
 test_n: 10               # number of test episodes to run
-train_n: 2000            # number of training steps to train agent
+baseline_train_n: 15000            # number of training steps to train agent
+kernel_train_n: 2000            # number of training steps to train agent
 
 #save_paths
 vehicle_path: "Data/Vehicles/"
