--- a/config/reward_run.yaml
+++ b/config/reward_run.yaml
@@ -1,56 +1,54 @@
 run_name: RewardTest
 
-base_config_name: "kernel_config"
+base_config_name: "config_file"
 n: 1
 
 runs:
   - run: 1
     name: "1Baseline"
-    r1: 0.012
-    r2: 0.006
     rk: 0
     constant_reward: 0
-    train_n: 15000
+    kernel_train_n: 15000
 
   - run: 2
     name: "2BasePenalty"
-    r1: 0.012
-    r2: 0.006
     rk: 0
     constant_reward: 1
-    train_n: 15000
+    kernel_train_n: 15000
 
   - run: 3
-    name: "3Bias002"
-    r1: 0.012
-    r2: 0.006
-    rk: 0.002
+    name: "3Bias02"
+    rk: 0.02
     constant_reward: 1
-    train_n: 2000
+    kernel_train_n: 2000
 
   - run: 4
-    name: "4Bias004"
-    r1: 0.012
-    r2: 0.006
-    rk: 0.004
+    name: "4Bias05"
+    rk: 0.05
     constant_reward: 1
-    train_n: 2000
+    kernel_train_n: 2000
 
   - run: 5
-    name: "5Bias01"
-    r1: 0.012
-    r2: 0.006
-    rk: 0.01
+    name: "5Bias6"
+    rk: 0.1
     constant_reward: 1
-    train_n: 2000
+    kernel_train_n: 2000
 
   - run: 6
-    name: "6RaceZeroRk004"
+    name: "6RaceZeroRk05"
     r1: 0.0
     r2: 0.00
-    rk: 0.004
-    constant_reward: 0
-    train_n: 10000
+    rk: 0.05
+    constant_reward: 1
+    kernel_train_n: 10000
+
+  - run: 7
+    name: "7RaceZeroRk05"
+    r1: 0.0
+    r2: 0.00
+    rk: 0.05
+    constant_reward: 1
+    kernel_train_n: 2000
 
 
 
