--- a/config/config_file.yaml
+++ b/config/config_file.yaml
@@ -20,7 +20,7 @@ m: 3.47
 g: 9.81
 l_r: 0.171
 l_f: 0.158
-vehicle_speed: 3          # speed at which the vehilce is set to travel at
+vehicle_speed: 2          # speed at which the vehilce is set to travel at
 
 # agent parameters
 n_beams: 20               # number of beams used by agent
@@ -46,6 +46,7 @@ v_min_plan: 1            # minimum speed for selecting a steering angle to preve
 test_n: 10               # number of test episodes to run
 baseline_train_n: 15000            # number of training steps to train agent
 kernel_train_n: 2000            # number of training steps to train agent
+buffer_n: 500
 
 #save_paths
 vehicle_path: "Data/Vehicles/"
