--- a/config/config_file.yaml
+++ b/config/config_file.yaml
@@ -28,6 +28,7 @@ range_finder_scale: 5     # scaling of beams for NN
 h_size: 100               # size of hidden layers in NN
 r1: 0.012                 # heading & velocity reward value
 r2: 0.006                 # distance reward penalty
+# rk: 0.0                  # constant reward applied at every step
 rk: 0.04                  # constant reward applied at every step
 
 
@@ -61,6 +62,7 @@ phi_range: 6.28 # I think this can be removed
 n_phi: 41                # number of points per rotation in discretising vehicle orientation
 
 # kernel Learning
+# constant_reward: 0       # constant reward applied at every step
 constant_reward: 1       # constant reward applied at every step
 kernel_mode: "viab"      # Name to save kernel by
 track_shrink_pixels: 8   # number of pixels to shrink the track map by
