--- a/config/reward_run.yaml
+++ b/config/reward_run.yaml
@@ -16,11 +16,17 @@ runs:
     constant_reward: 1
     kernel_train_n: 2000
 
-  - run: 4
-    name: "4Bias04"
-    rk: 0.04
+  - run: 32
+    name: "3Bias02"
+    rk: 0.02
     constant_reward: 1
     kernel_train_n: 2000
+
+  # - run: 4
+  #   name: "4Bias04"
+  #   rk: 0.04
+  #   constant_reward: 1
+  #   kernel_train_n: 2000
 
   - run: 5
     name: "5Bias1"
