Levine is getting there

--- a/config/levine_conf.yaml
+++ b/config/levine_conf.yaml
@@ -26,9 +26,12 @@ vehicle_speed: 2          # speed at which the vehilce is set to travel at
 n_beams: 20               # number of beams used by agent
 range_finder_scale: 5     # scaling of beams for NN
 h_size: 100               # size of hidden layers in NN
-r1: 0.012                 # heading & velocity reward value
-r2: 0.006                 # distance reward penalty
-rk: 0.04                  # constant reward applied at every step
+# r1: 0.012                 # heading & velocity reward value
+# r2: 0.006                 # distance reward penalty
+# rk: 0.04                   # size of hidden layers in NN
+r1: 0.0                 # heading & velocity reward value
+r2: 0.00                 # distance reward penalty
+rk: 0.0                  # constant reward applied at every step
 
 
 #simulator
@@ -45,7 +48,7 @@ v_min_plan: 1            # minimum speed for selecting a steering angle to preve
 # test params
 test_n: 10               # number of test episodes to run
 baseline_train_n: 20000            # number of training steps to train agent
-kernel_train_n: 2000            # number of training steps to train agent
+kernel_train_n: 10000            # number of training steps to train agent
 buffer_n: 500
 
 #save_paths
@@ -56,7 +59,7 @@ dynamics_path: "Data/Dynamics/"
 nq_steer: 9              # number of modes for the steering range
 kernel_time_step: 0.2    # Planning timestep used in kernel generation
 lookahead_time_step: 0.2 # Planning timestep used the supervisor
-n_dx: 30                 # number of points per m in discretising the track map
+n_dx: 40                 # number of points per m in discretising the track map
 phi_range: 6.28 # I think this can be removed
 n_phi: 41                # number of points per rotation in discretising vehicle orientation
 
@@ -64,6 +67,6 @@ n_phi: 41                # number of points per rotation in discretising vehicle
 # constant_reward: 0       # constant reward applied at every step
 constant_reward: 1       # constant reward applied at every step
 kernel_mode: "viab"      # Name to save kernel by
-track_shrink_pixels: 0   # number of pixels to shrink the track map by
+track_shrink_pixels: 6   # number of pixels to shrink the track map by
 n_intermediate_pts: 2
 
